# simple-todo

./: README.md  requirements.txt
backend/: pyproject.toml
backend/todo/: __main__.py  apis.py  app.py  db.py  models.py  schemas.py
django_server/server/: router.py  settings.py
django_server/todo/: models.py
django_server/todo/migrations/: 0001_initial.py
frontend/: README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  api.js  index.tsx
frontend/src/component/Detail/: Detail.js
frontend/src/component/Index/: Index.css  Index.js
frontend/src/component/List/: List.css  List.js  TodoItem.js
frontend/src/components/: App.css  App.tsx  TodoCategory.tsx
frontend/src/components/TodoCategory/: index.tsx
frontend/src/components/TodoDetail/: TodoDetail.css  TodoDetailDrawer.tsx  TodoDetailForm.tsx
frontend/src/constant/: Interface.ts  api.ts  params.ts
frontend/src/store/: AuthStore.ts  TodoStore.ts
frontend/src/utils/: context.ts  provider.ts
server/: Dockerfile  command.sh  docker-compose.yml  pyproject.toml  requirements.txt
server/account/: serializers.py  views.py
server/server/: router.py  settings.py  urls.py
server/todo/: __main__.py  admin.py  apis.py  app.py  config.py  constants.py  db.py  models.py  schemas.py  serializers.py  tests.py  views.py
server/todo/migrations/: 0001_initial.py
simple_todo/: settings.py  urls.py
todo/: models.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_auto_20190116_1022.py  0003_todo_created_at.py
(+10 files in other folders)
